fix number alignment in IE
IE 11 and below have issues with `rem` line-height inside
pseudo-elements (caused by Compass' `adjust-font-size-to` mixin).

Also, specify absolute position explicitly with `top` and `left` (and
relatively to the list items), and use left padding on list items
rather than left margin on all of their children.

--- a/assets/targets/components/base/_typography.scss
+++ b/assets/targets/components/base/_typography.scss
@@ -198,24 +198,27 @@
         border-top: 1px solid rgba(#000000, 0.1);
         counter-increment: steps;
         list-style-type: none;
+        position: relative;
 
         &:first-child {
           border-top: none;
         }
 
         &::before {
-          @include adjust-font-size-to(50px);
+          @include rem(font-size, 50px);
           @include rem(letter-spacing, -5px);
-          @include rem(margin-left, -80px);
           @include rem(padding-top, 20px);
           @include rem(width, 60px);
           color: $black;
           content: counter(steps);
-          display: inline-block;
+          display: block;
           float: left;
           font-weight: $bold;
+          left: 0;
+          line-height: 1.2;
           position: absolute;
           text-align: right;
+          top: 0;
         }
 
         & > p:first-child {
@@ -235,19 +238,18 @@
 
       @include breakpoint(desktop) {
         li {
-
           * {
             max-width: 650px;
           }
 
           &::before {
-            @include adjust-font-size-to(68px);
+            @include rem(font-size, 68px);
+            @include rem(left, 10px);
             @include rem(letter-spacing, -7px);
-            @include rem(margin-left, -60px);
+            line-height: 1.05;
           }
 
           .ticked-list li::before {
-            @include rem(margin-left, -22px);
             @include rem(top, 7px);
           }
         }
@@ -257,19 +259,18 @@
         li {
           margin-right: 0;
           padding-left: 0;
-
-          &::before {
-            @include rem(margin-left, 10px);
-          }
         }
       }
 
       @include breakpoint(wide) {
+        & > li {
+          @include rem(padding-left, 110px);
+        }
+        
         li {
-
           > * {
             max-width: 650px;
-            margin-left: 110px;
+            margin-left: 0;
           }
 
           li > * {
@@ -277,7 +278,7 @@
           }
 
           &::before {
-            @include adjust-font-size-to(80px);
+            @include rem(font-size, 80px);
             @include rem(letter-spacing, -11px);
           }
         }
